--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,15 @@
-/* normalize.css v3.0.0 | MIT License | git.io/normalize */
+/* normalize.css v3.1.0 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
+
 body {
   margin: 0;
 }
+
 article,
 aside,
 details,
@@ -17,53 +20,68 @@ header,
 hgroup,
 main,
 nav,
+section,
 div,
 summary {
   display: block;
 }
+
 audio,
 canvas,
 progress,
 video {
   display: inline-block;
-  vertical-align: baseline;
+  vertical-align: middle;
 }
+
 audio:not([controls]) {
   display: none;
   height: 0;
 }
+
 [hidden],
 template {
   display: none;
 }
+
 a {
-  background: transparent;
+  background-color: transparent;
+  text-decoration: none;
 }
+
 a:active,
 a:hover {
-  outline: 0;
+  outline: none;
 }
+
 abbr[title] {
   border-bottom: 1px dotted;
+  cursor: help;
 }
+
 b,
 strong {
-  font-weight: bold;
+  font-weight: bolder;
 }
+
 dfn {
   font-style: italic;
 }
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
+
 mark {
   background: #ff0;
   color: #000;
 }
+
 small {
   font-size: 80%;
 }
+
 sub,
 sup {
   font-size: 75%;
@@ -71,29 +89,38 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
+
 sup {
-  top: -0.5em;
+  top: -0.4em;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 img {
-  border: 0;
+  border: none;
 }
+
 svg:not(:root) {
   overflow: hidden;
 }
+
 figure {
   margin: 1em 40px;
 }
+
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
+  border: none;
+  border-top: 1px solid #ccc;
 }
+
 pre {
   overflow: auto;
 }
+
 code,
 kbd,
 pre,
@@ -101,6 +128,7 @@ samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
+
 button,
 input,
 optgroup,
@@ -110,56 +138,69 @@ textarea {
   font: inherit;
   margin: 0;
 }
+
 button {
   overflow: visible;
 }
+
 button,
 select {
   text-transform: none;
 }
+
 button,
-html input[type="button"],
+input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
+  appearance: button;
   cursor: pointer;
 }
+
 button[disabled],
-html input[disabled] {
-  cursor: default;
+input[disabled] {
+  cursor: not-allowed;
 }
+
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
+
 input {
-  line-height: normal;
+  line-height: 1.15;
 }
+
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
+
 input[type="search"] {
   -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
+  appearance: textfield;
   box-sizing: content-box;
 }
+
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+
 fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+  border: 1px solid #dcdcdc;
+  margin: 0;
+  padding: 0.5em 0.75em;
+  box-sizing: border-box;
 }
+
 legend {
   border: 0;
   padding: 0;
